# Scripty-Language

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Scripty.vcxproj  Scripty.vcxproj.filters  errors.hpp  grammar.txt  interpreter.cpp  json.hpp  main.cpp  math.hpp  nodes.cpp  nodes.hpp  parser.cpp  parser.hpp  position.hpp  syntax.plan  token.cpp  tokenizer.cpp  tokenizer.hpp
src/: nodes.cpp  parser.cpp  tokenizer.cpp
src/errors/: errors.hpp
src/include/: errors.hpp  nodes.hpp  parser.hpp  position.hpp  tokenizer.hpp
src/nodes/: nodes.cpp  nodes.hpp
src/parser/: parser.cpp  parser.hpp
src/tokenizer/: token.hpp  tokenizer.cpp  tokenizer.hpp
src/vm/: OpCode.h  logger.h  logger.hpp  scripty-vm.cpp  scripty-vm.hpp  types.h  values.h
src/vm/bytecode/: OpCode.h
